--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,12 +26,10 @@ services:
     image: mysql:8.0
     container_name: laravel_mysql
     environment:
-      MYSQL_DATABASE: laravel
-      MYSQL_USER: laravel
-      MYSQL_PASSWORD: secret
-      MYSQL_ROOT_PASSWORD: root
-    ports:
-      - "3306:3306"
+      MYSQL_DATABASE: laraveldb
+      MYSQL_USER: duckcanfly
+      MYSQL_PASSWORD: duck4rm4nd0
+      MYSQL_ROOT_PASSWORD: duckcanfly@laravel
     volumes:
       - dbdata:/var/lib/mysql
 
