--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - .:/var/www
     depends_on:
       - mysql
+    networks:
+      - laravel
 
   nginx:
     image: nginx:alpine
@@ -21,14 +23,24 @@ services:
       - ./docker/nginx:/etc/nginx/conf.d
     depends_on:
       - app
+    networks:
+      - laravel
 
   mysql:
     image: mysql:8.0
+    container_name: laravel_mysql
     environment:
       MYSQL_DATABASE: laraveldb
       MYSQL_USER: duckcanfly
       MYSQL_PASSWORD: duck4rm4nd0
       MYSQL_ROOT_PASSWORD: duckcanfly@laravel
+    volumes:
+      - dbdata:/var/lib/mysql
+    networks:
+      - laravel
+
+networks:
+  laravel:
 
 volumes:
   dbdata:
