--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,20 +1,27 @@
 server {
     listen 80;
-    index index.php;
+    server_name myserver.armandowni.com;
+    return 301 https://$host$request_uri;  # Redirect all HTTP to HTTPS
+}
+
+server {
+    listen 443 ssl;
+    server_name myserver.armandowni.com;
+
+    ssl_certificate /etc/nginx/ssl/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+
     root /var/www/public;
+    index index.php index.html;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
     location ~ \.php$ {
-        fastcgi_pass app:9000;
-        fastcgi_index index.php;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-    }
-
-    location ~ /\.ht {
-        deny all;
+        fastcgi_pass laravel_app:9000;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_index index.php;
     }
 }
