--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,7 +1,9 @@
 server {
     listen 80;
     server_name myserver.armandowni.com;
-    return 301 https://$host$request_uri;  # Redirect all HTTP to HTTPS
+
+    # Redirect all HTTP requests to HTTPS
+    return 301 https://$host$request_uri;
 }
 
 server {
@@ -21,7 +23,7 @@ server {
     location ~ \.php$ {
         include fastcgi_params;
         fastcgi_pass laravel_app:9000;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 }
