--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.23",
         "axios": "^0.19",
         "bootstrap": "^4.1.0",
         "cross-env": "^5.1",
@@ -17,9 +18,11 @@
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
+        "postcss": "^8.5.6",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
+        "tailwindcss": "^4.1.18",
         "vue": "^2.5.17"
     }
 }
