--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,11 @@
 version: "3.8"
 
 services:
+  web:
+    image: myapp:latest
+    ports:
+      - "80:80"
+      - "443:443"
   app:
     build:
       context: .
