--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,17 +1,14 @@
+# Remove or comment out HTTPS server block and redirect
+# server {
+#     listen 80;
+#     server_name myserver.armandowni.com;
+#     return 301 https://$host$request_uri;
+# }
+
+# Keep only HTTP block
 server {
     listen 80;
     server_name myserver.armandowni.com;
-
-    # Redirect all HTTP requests to HTTPS
-    return 301 https://$host$request_uri;
-}
-
-server {
-    listen 443 ssl;
-    server_name myserver.armandowni.com;
-
-    ssl_certificate /etc/nginx/ssl/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
     root /var/www/public;
     index index.php index.html;
