--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     volumes:
       - .:/var/www
     depends_on:
-      - mysql
+      - mariadb
     networks:
       - laravel
     command: php-fpm
@@ -21,28 +21,39 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./docker/nginx:/etc/nginx/conf.d        # Nginx configs
-      - .:/var/www                              # Laravel app
-      - /etc/letsencrypt/live/myserver.armandowni.com:/etc/nginx/ssl:ro  # SSL certs
+      - ./docker/nginx:/etc/nginx/conf.d
+      - .:/var/www
+      - ./docker/certbot/conf:/etc/letsencrypt
+      - ./docker/certbot/www:/var/www/certbot
     depends_on:
       - app
     networks:
       - laravel
+    restart: unless-stopped
 
-
-  mysql:
-    image: mysql:8.0
-    container_name: laravel_mysql
+  mariadb:
+    image: mariadb:11.2
+    container_name: laravel_mariadb
     environment:
       MYSQL_DATABASE: laraveldb
       MYSQL_USER: duckcanfly
       MYSQL_PASSWORD: duck4rm4nd0
-      MYSQL_ROOT_PASSWORD: duckcanfly@laravel
-    command: --innodb-buffer-pool-size=128M
+      MYSQL_ROOT_PASSWORD: root
+    ports:
+      - "3306:3306"
     volumes:
       - dbdata:/var/lib/mysql
     networks:
       - laravel
+    restart: unless-stopped
+
+  certbot:
+    image: certbot/certbot
+    container_name: laravel_certbot
+    volumes:
+      - ./docker/certbot/conf:/etc/letsencrypt
+      - ./docker/certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
 volumes:
   dbdata:
