--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,9 +1,14 @@
 server {
     listen 80;
-    server_name myserver.armandowni.com;
+    server_name projects.armandowni.com;
 
     root /var/www/public;
     index index.php index.html;
+
+    # For Let's Encrypt validation
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
@@ -14,5 +19,9 @@ server {
         fastcgi_pass laravel_app:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
+
+    location ~ /\.ht {
+        deny all;
     }
 }
