--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -2,34 +2,13 @@ server {
     listen 80;
     server_name projects.armandowni.com;
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-server {
-    listen 443 ssl http2;
-    server_name projects.armandowni.com;
-
     root /var/www/public;
     index index.php index.html;
 
-    # SSL Configuration
-    ssl_certificate /etc/letsencrypt/live/projects.armandowni.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/projects.armandowni.com/privkey.pem;
-    
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
-
-    # Security headers
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
+    # For Let's Encrypt validation
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
@@ -40,14 +19,9 @@ server {
         fastcgi_pass laravel_app:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param HTTPS on;
     }
 
     location ~ /\.ht {
-        deny all;
-    }
-
-    location ~ /\. {
         deny all;
     }
 }
