--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,10 +38,14 @@ services:
       MYSQL_USER: duckcanfly
       MYSQL_PASSWORD: duck4rm4nd0
       MYSQL_ROOT_PASSWORD: root
-    # ADD --skip-name-resolve to the end of this line:
-    command: --default-authentication-plugin=mysql_native_password --innodb-buffer-pool-size=64M --innodb-log-file-size=32M --skip-name-resolve --bind-address=0.0.0.0
+    command: >
+      --default-authentication-plugin=mysql_native_password 
+      --skip-name-resolve 
+      --bind-address=0.0.0.0 
+      --innodb-buffer-pool-size=64M 
+      --innodb-log-file-size=32M
     ports:
-      - "3306:3306"
+      - "0.0.0.0:3306:3306"
     volumes:
       - dbdata:/var/lib/mysql
     networks:
