--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
         "tailwindcss": "^3.3.1",
         "vue": "^2.7.14",
         "vue-template-compiler": "^2.7.14"
+    },
+    "dependencies": {
+        "flowbite": "^4.0.1"
     }
 }
